Fixed the img link whole row bug

--- a/index.html
+++ b/index.html
@@ -19,14 +19,15 @@
       .text {
         color: rgb(255,255,255);
         text-align: center;
-
       }
 
-      #main-pic {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        width: 20%;
+      #latest-video {
+        text-align: center;
+      }
+
+      #latest-vid-img {
+        width: 15%;
+        height: auto;
       }
 
       #yt-link {
@@ -44,16 +45,18 @@
     <h1 class="text"> Welcome to the Bullshiet Universe</h1>
     <p id="Intro-text" class="text"> Follow along on the adventures of 4 bois</p>
     
-  
     <p class="text"> New video in X days...</p>
 
     <!-- HERE IS A RANDOM COMMENT SCHESCHESCHE-->
-
-    <a target="_blank" href="https://www.youtube.com/@bullshietbois217"> <img id="main-pic" src="bsb.png"></a>
-    <br>
-      <a target="_blank" href="https://www.youtube.com/@bullshietbois217"> 
-          <img id="yt-link" src="yt.png">
+    
+    <div id="latest-video">
+      <a href="https://www.youtube.com/watch?v=dq9nKpeAzm8">
+        <img alt="My website" src="bsb.png" id="latest-vid-img">
       </a>
+    </div>
+    <a target="_blank" href="https://www.youtube.com/@bullshietbois217"> 
+        <img id="yt-link" src="yt.png">
+    </a>
   </body>
 
 
