Added blank target to img link

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <!-- HERE IS A RANDOM COMMENT SCHESCHESCHE-->
     
     <div id="latest-video">
-      <a href="https://www.youtube.com/watch?v=dq9nKpeAzm8">
+      <a  target="_blank" href="https://www.youtube.com/watch?v=dq9nKpeAzm8">
         <img alt="My website" src="bsb.png" id="latest-vid-img">
       </a>
     </div>
