--- a/index.html
+++ b/index.html
@@ -36,6 +36,16 @@
         right: 2%;
         width: 2%;
         height: auto;
+        transition: all 0.25s;
+      }
+
+      #yt-link:hover {
+        position: absolute;
+        top: 2%;
+        right: 2%;
+        width: 2%;
+        height: auto;
+        transform: scale(1.5)
       }
      
 
@@ -57,6 +67,7 @@
     <a target="_blank" href="https://www.youtube.com/@bullshietbois217"> 
         <img id="yt-link" src="yt.png">
     </a>
+
   </body>
 
 
