Added images folder

--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
     
     <div id="latest-video">
       <a  target="_blank" href="https://www.youtube.com/watch?v=dq9nKpeAzm8">
-        <img alt="My website" src="bsb.png" id="latest-vid-img">
+        <img alt="My website" src="images/bsb.png" id="latest-vid-img">
       </a>
     </div>
     <a target="_blank" href="https://www.youtube.com/@bullshietbois217"> 
-        <img id="yt-link" src="yt.png">
+        <img id="yt-link" src="images/yt.png">
     </a>
 
     <h2 id="time-since">Time since last video</h2>
