--- a/index.html
+++ b/index.html
@@ -53,22 +53,50 @@
         transform: scale(1.5)
       }
 
-      .containers {
-        color: rgb(255,255,255);
-        
+      #bjorn {
+        width: 10%;
+        height: auto;
+        position: absolute;
+        top: 0%;
+        right: 25%;
+        transform: scaleX(-1);
       }
+      #fredrik {
+        width: 10%;
+        height: auto;
+        position: absolute;
+        top: 55%;
+        right: 10%;
+        transform: scaleX(-1);
+      }
+      #valter {
+        width: 15%;
+        height: auto;
+        position: absolute;
+        top: 40%;
+        right: 80%;
+      }
+      #andre {
+        width: 21%;
+        height: auto;
+        position: absolute;
+        top:-5%;
+        right: 60%;
+      }
+
+
     </style>
   </head>
 
   <body>
     <h1 class="text"> Welcome to the Bullshiet Universe</h1>
-    <p id="Intro-text" class="text"> Follow along on the adventures of 4 bois</p>
+    <p id="Intro-text" class="text"> Four bois going on an adventure</p>
 
     <!-- HERE IS A RANDOM COMMENT SCHESCHESCHE-->
     
     <div id="latest-video">
       <a  target="_blank" href="https://www.youtube.com/watch?v=dq9nKpeAzm8">
-        <img alt="My website" src="images/bsb.png" id="latest-vid-img">
+        <img src="images/bsb.png" id="latest-vid-img">
       </a>
     </div>
     <a target="_blank" href="https://www.youtube.com/@bullshietbois217"> 
@@ -117,6 +145,9 @@
       },1000);
     </script>
   </body>
-
+  <img src="images/andreAnkaOLD.png" id="andre">
+  <img src="images/valterAnkaV1.png" id="valter">
+  <img src="images/freddeAnkaV1.png" id="fredrik">
+  <img src="images/bjornAnkaV1.png" id="bjorn">
 
 </html>
