Tried to fix the scaling issue

--- a/index.html
+++ b/index.html
@@ -21,26 +21,20 @@
       .text {
         color: rgb(255,255,255);
         text-align: center;
+        font-size: 3.5vw;
       }
 
       #time-since {
         color: rgb(255,255,255);
-        position: absolute;
-        top: auto;
-        right: 44%;
-
+        text-align: center;
+        padding-top: 1%;
+        font-size: 1.7vw;
       }
 
       #latest-video {
-        text-align: center;
+        display: flex; 
+        justify-content: center;
         z-index: 0.9;
-        position: relative;
-      }
-
-      #latest-vid-img {
-        width: 15%;
-        height: 20%;
-        text-align: center;
       }
 
       #yt-link {
@@ -123,14 +117,14 @@
 
   rain();
   </script>
-    <h1 class="text"> Welcome to the Bullshiet Universe</h1>
-    <p id="Intro-text" class="text"> Four bois going on an adventure</p>
+    <br>
+    <br>
+    <h1 class="text"> Welcome to the <br> Bullshiet Universe</h1>
 
     <!-- HERE IS A RANDOM COMMENT SCHESCHESCHE-->
-    
-    <div id="latest-video">
-      <iframe width="700" height="400" src="https://www.youtube.com/embed/dq9nKpeAzm8?controls=1" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-      </iframe>
+    <div id=latest-video>
+    <iframe width="50%" height="400vw" src="https://www.youtube.com/embed/dq9nKpeAzm8?controls=1" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+    </iframe>
     </div>
     <a target="_blank" href="https://www.youtube.com/@bullshietbois217"> 
         <img id="yt-link" src="images/yt.png">
