Rain behind yt vid again

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       }
 
       #latest-video {
+        position: relative;
         display: flex; 
         justify-content: center;
         z-index: 0.9;
